NXIO-440: Add ES Cluster parameter

--- a/config/logstash.conf
+++ b/config/logstash.conf
@@ -19,7 +19,7 @@ filter {
 output {
   elasticsearch {
     host => "%ESL_HOST%"
-    cluster => "nuxeologs"
+    cluster => "%ESL_CLUSTER%"
     port => %ESL_PORT%
     protocol => "transport"
   }
