NXIO-440: Use log4j input

--- a/config/logstash.conf
+++ b/config/logstash.conf
@@ -1,20 +1,7 @@
 input {
-  file {
-    path => "/logs/*/server.log"
-    codec => multiline {
-      pattern => "^[\d]+"
-      negate => true
-      what => previous
-    }
-  }
+  log4j { }
 }
 filter {
-    grok {
-      break_on_match => false
-      match => ["path", "/logs/%{GREEDYDATA:envId}/server.log"]
-      match => ["message", "(?m)%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:level}(?: \[%{JAVAFILE:class}\])?(?: %{GREEDYDATA:logmessage})?"]
-      add_field => ["service", "%{envId}"]
-    }
 }
 output {
   elasticsearch {
@@ -23,5 +10,7 @@ output {
     port => %ESL_PORT%
     protocol => "transport"
   }
-  stdout { }
+  stdout {
+    codec => rubydebug
+  }
 }
